[project]
name = "reprocesso-dengue"
version = "0.1.0"
description = "Tracker local de reprocesso de amostras de dengue (LACEN-RS) — NiceGUI + SQLite"
requires-python = ">=3.11"
dependencies = [
    "nicegui>=1.4",
    "pandas>=2.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
