[project]
name = "reprocesso-dengue"
version = "1.0.0"
description = "Tracker de reprocesso de amostras de dengue (LACEN-RS) — NiceGUI + PostgreSQL (Neon)"
requires-python = ">=3.11"
dependencies = [
    "nicegui>=3.0",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "psycopg2-binary>=2.9.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
